@@ -1,4 +1,5 @@
-/* Copyright 2010, 2011, 2012, 2013, 2014, 2015 Free Software Foundation, Inc.
+/* Copyright 2010, 2011, 2012, 2013, 2014, 2015, 2016 Free Software
+   Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -544,7 +545,7 @@ xspara__add_next (TEXT *result, char *word, int word_len, int transparent)
           wchar_t wc;
           size_t char_len;
 
-          char_len = mbrtowc (&wc, word, 10, NULL);
+          char_len = mbrtowc (&wc, word, word_len, NULL);
           if ((long) char_len > 0 && !iswspace (wc))
             {
               /* Make the pending space up to two spaces. */
@@ -569,13 +570,14 @@ xspara__add_next (TEXT *result, char *word, int word_len, int transparent)
         {
           /* Save last character in WORD */
           char *p = word + word_len;
+          int len = 0;
           while (p > word)
             {
-              p--;
-              if ((long) mbrlen(p, 10, NULL) > 0)
+              p--; len++;
+              if ((long) mbrlen(p, len, NULL) > 0)
                 {
                   wchar_t wc = L'\0';
-                  mbrtowc (&wc, p, 10, NULL);
+                  mbrtowc (&wc, p, len, NULL);
                   if (!wcschr (L".?!\"')]", wc))
                     {
                       state.last_letter = wc;
@@ -616,7 +618,7 @@ xspara__add_next (TEXT *result, char *word, int word_len, int transparent)
 
       while (left > 0)
         {
-          int char_len = mbrtowc (&w, p, 10, NULL);
+          int char_len = mbrtowc (&w, p, left, NULL);
           left -= char_len;
           p += char_len;
           len++;
@@ -746,6 +748,7 @@ char *
 xspara_add_text (char *text)
 {
   char *p = text;
+  int len;
   wchar_t wc;
   size_t char_len;
   TEXT result;
@@ -753,16 +756,17 @@ xspara_add_text (char *text)
 
   text_init (&result);
 
+  len = strlen (text); /* FIXME: Get this as an argument */
   state.end_line_count = 0;
 
-  while (*p)
+  while (len > 0)
     {
-      char_len = mbrtowc (&wc, p, 10, NULL);
+      char_len = mbrtowc (&wc, p, len, NULL);
       if ((long) char_len == 0)
         break; /* Null character. Shouldn't happen. */
       else if ((long) char_len < 0)
         {
-          p++; /* Invalid.  Just try to keep going. */
+          p++; len--; /* Invalid.  Just try to keep going. */
           continue;
         }
 
@@ -809,13 +813,14 @@ xspara_add_text (char *text)
                   if (state.end_sentence == 1
                       && !state.french_spacing)
                     {
-                      char *q = p + char_len;
                       wchar_t q_char;
                       size_t q_len;
                       int at_least_two = 0;
 
                       /* Check if the next character is whitespace as well. */
-                      q_len = mbrtowc (&q_char, q, 10, NULL);
+                      q_len = mbrtowc (&q_char,
+                                       p + char_len, len - char_len,
+                                       NULL);
                       if ((long) q_len > 0)
                         {
                           if (iswspace (q_char))
@@ -836,18 +841,20 @@ xspara_add_text (char *text)
 
                               TEXT new_space;
                               char *pspace;
+                              int pspace_left;
                               int len;
                               int i;
 
                               text_init (&new_space);
                               pspace = state.space.text;
+                              pspace_left = state.space.end;
                               state.space_counter = 0;
 
                               for (i = 0; i < 2; i++)
                                 {
                                   if (!*pspace)
                                     break;
-                                  len = mbrlen (pspace, 10, NULL);
+                                  len = mbrlen (pspace, pspace_left, NULL);
 
                                   /* Subtitute newlines in the pending space
                                      with spaces. */
@@ -858,6 +865,7 @@ xspara_add_text (char *text)
                                   state.space_counter++;
 
                                   pspace += len;
+                                  pspace_left -= len;
                                 }
 
                               state.space.end = 0;
@@ -875,8 +883,8 @@ xspara_add_text (char *text)
                                 text_append_n (&state.space, p, char_len);
                               state.space_counter++;
 
-                              p += char_len;
-                              char_len = mbrtowc (&wc, p, 10, NULL);
+                              p += char_len; len -= char_len;
+                              char_len = mbrtowc (&wc, p, len, NULL);
                               if ((long) char_len <= 0 || !iswspace (wc))
                                 break;
                             }
@@ -884,8 +892,8 @@ xspara_add_text (char *text)
                           /* Skip any more following whitespace. */
                           while ((long) char_len > 0 && iswspace (wc))
                             {
-                              p += char_len;
-                              char_len = mbrtowc (&wc, p, 10, NULL);
+                              p += char_len; len -= char_len;
+                              char_len = mbrtowc (&wc, p, len, NULL);
                             }
 
                           /* Make it up to two characters. */
@@ -1025,7 +1033,7 @@ xspara_add_text (char *text)
             }
         }
 
-      p += char_len;
+      p += char_len; len -= char_len;
     }
 
   if (result.space > 0)
