@@ -1,5 +1,12 @@
 2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_add_text)
+	(xspara__add_next): Supply third argument to mbrtowc to say how 
+	many bytes are left.  Same for second argumet to mbrlen.
+	Suggestion from Eli Zaretskii.
+
+2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/tests/run_parser_all.sh: Remove TEXINFO_XS=omit line.
 	* tp/tests/coverage/tests-parser.txt: Skip 
 	formatting_utf8_enable_encoding test.
